--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,7 +13,7 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
-<!--    <style name="Theme.Splashscreen" parent="Theme.Test">-->
-<!--        <item name="android:windowBackground">@drawable/splashscreen</item>-->
-<!--    </style>-->
+    <style name="Theme.Splashscreen" parent="Theme.Test">
+        <item name="android:windowBackground">@drawable/splashscreen</item>
+    </style>
 </resources>
